<resources>
    <string name="app_name">InternshipManagementSystem</string>
    //Headings
    <string name="heading_one">Best tips for your education</string>
    <string name="heading_two">Best tips for your education</string>
    <string name="heading_three">Best tips for your education</string>

    <string name="start">Start</string>
    <string name="close">Close</string>

    //Description
    <string name="desc_one">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="desc_two"> . Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="desc_three"> </string>

    <!-- strings.xml -->
    <string name="next">Next</string>

    <string name="best_tips_f">

Best tips for your education
</string>

    <string name="didn_t_receive_otp">Didn’t receive OTP</string>
    <string name="resend">Resend</string>
    <string name="_01_00">01:00</string>
    <string name="submit_otp">Submit OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="list_of_internship">List of Internship</string>
    <string name="todo">TODO</string>
    <string name="list_of_application">List of Application</string>

</resources>