<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/whitelight"
tools:context=".Admin.AdminVerificationActivity">
<ImageView
    android:id="@+id/img3"
    android:layout_width="match_parent"
    android:layout_height="128.73dp"
    android:background="@drawable/rectangle5"/>

<ImageView
    android:id="@+id/img4"
    android:layout_width="match_parent"
    android:layout_height="120.73dp"
    android:layout_below="@id/img3"
    android:layout_marginTop="-110dp"
    android:background="@drawable/rectangle6" />

<ImageButton
    android:id="@+id/backArrow"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_below="@id/img4"
    android:layout_marginStart="10dp"
    android:layout_marginTop="-40dp"
    android:background="@android:color/transparent"
    android:src="@drawable/ic_backarrow"
    tools:ignore="SpeakableTextPresentCheck" />

<TextView
    android:id="@+id/img6"
    android:layout_width="280dp"
    android:layout_height="40dp"
    android:text="Phone Verification"
    android:textColor="@color/purple_900"
    android:textStyle="bold"
    android:textSize="30sp"
    android:layout_below="@id/backArrow"
    android:layout_centerInParent="true"
    />

<TextView
    android:layout_below="@id/img6"
    android:layout_width="314dp"
    android:layout_height="44dp"
    android:layout_marginTop="15dp"
    android:layout_centerInParent="true"
    android:text="Enter your email address to reset your password instruction"
    android:id="@+id/img"
    android:textColor="@color/black"
    android:textSize="16sp"/>

<com.chaos.view.PinView
    android:id="@+id/firstPinView"
    style="@style/PinWidget.PinView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/img"
    android:layout_centerInParent="true"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:cursorVisible="true"
    android:enabled="true"
    android:inputType="number"
    app:itemCount="4"
    app:itemRadius="5dp"
    app:itemSpacing="12dp"
    app:lineColor="@color/grey"
    app:viewType="rectangle"
    tools:ignore="SpeakableTextPresentCheck" />
<LinearLayout
    android:id="@+id/resendOtp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/firstPinView"
    android:layout_margin="20dp"
    android:orientation="horizontal"
    android:weightSum="2">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:text="@string/didn_t_receive_otp"
        android:textAlignment="center"
        android:textColor="#1E1E1E"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.7"
        android:text="@string/resend"
        android:textColor="#2F64EC"
        android:textSize="14sp" />
    <ImageView
        android:id="@+id/ivTimer"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:src="@drawable/ic_timer"/>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.2"
        android:text="@string/_01_00"
        android:textColor="#1E1E1E"
        android:textSize="14sp" />


</LinearLayout>

<RelativeLayout
    android:id="@+id/verify"
    android:layout_marginTop="35dp"
    android:layout_width="285dp"
    android:layout_height="50dp"
    android:layout_centerInParent="true"
    android:layout_below="@id/resendOtp">

    <ImageButton
        android:id="@+id/submitOtp"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle_bg"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView

        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:src="@drawable/signup"
        android:text="Verify"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>

<!--  <LinearLayout
      android:id="@+id/userSignUp"
      android:layout_below="@id/verify"
      android:layout_width="240dp"
      android:layout_height="25dp"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:layout_marginTop="4dp">
      <TextView
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:text="Having Problem ?"/>
      <TextView
          android:layout_width="100dp"
          android:layout_height="25dp"
          android:text="Send Again"
          android:id="@+id/openReg"
          android:textStyle="bold"
          android:textColor="@color/black"/>
  </LinearLayout>  -->

<ImageView
    android:id="@+id/img7"
    android:layout_width="match_parent"
    android:layout_height="103.73dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/rect_6" />

    <ImageView
        android:id="@+id/img8"
        android:layout_width="match_parent"
        android:layout_height="100.73dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-8dp"
        android:background="@drawable/rectangle_5" />
</RelativeLayout>